# blockscope-visualizer

./: .gitignore  LICENSE  README.md  pyproject.toml
src/: block_registry.py  camera.py  main.py  player.py  player_marker.py  replay_loader.py  scene.py  settings.py  shader_program.py  textures.py  video_player.py  world.py
src/meshes/: chunk_mesh_builder.py
src/shaders/: chunk.frag  chunk.vert  marker.frag  marker.vert
